fix: navbar alignment on smaller screens

--- a/assets/css/critical-style.css
+++ b/assets/css/critical-style.css
@@ -119,7 +119,7 @@ a:hover {
 }
 
 .site-slogan {
-  font-size: 12px;
+  font-size: 14px;
   color: var(--site-name-color);
 }
 
@@ -133,7 +133,7 @@ a:hover {
 .nav-item {
   display: inline-block;
   font-size: 18px;
-  padding: 4px 6px;
+  padding-right: 6px;
   margin: 2px 3px 2px 0;
   line-height: 1.5;
   white-space: nowrap;
